--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 *.js linguist-vendored
+*.css linguist-vendored
+
 admin.js linguist-vendored=false
 app.js linguist-vendored=false
+layout.css linguist-vendored=false
+play.css linguist-vendored=false
